功能完成版

--- a/css/base.css
+++ b/css/base.css
@@ -74,7 +74,7 @@ a {
 #center-container {
     width:600px;
     left:200px;
-    background-color:#1a1a1a;
+    background-color:#E3E3E3;/*背景颜色*/
     color:#ccc;
 }
 
