--- a/css/base.css
+++ b/css/base.css
@@ -29,7 +29,7 @@ a {
 
 #container {
     width: 1000px;
-    height: 600px;
+    height:400px;
     margin:0 auto;
     position:relative;
 }
@@ -37,7 +37,7 @@ a {
 #left-container, 
 #right-container, 
 #center-container {
-    height:600px;
+    height:400px;
     position:absolute;
     top:0;
 }
@@ -74,7 +74,7 @@ a {
 #center-container {
     width:600px;
     left:200px;
-    background-color:#E3E3E3;/*背景颜色*/
+    background-color:#E3E3E3;/*背景颜色 透明transparent*/
     color:#ccc;
 }
 
@@ -100,7 +100,7 @@ a {
 #infovis {
     position:relative;
     width:600px;
-    height:600px;
+    height:400px;
     margin:auto;
     overflow:hidden;
 }
